Fix: (Ecommerce) Orders and Products tables not scrolling when custom scrollbars disabled

--- a/src/app/main/content/apps/e-commerce/orders/orders.component.scss
+++ b/src/app/main/content/apps/e-commerce/orders/orders.component.scss
@@ -17,6 +17,7 @@
     .orders-table {
         flex: 1 1 auto;
         border-bottom: 1px solid rgba(0, 0, 0, .12);
+        overflow: auto;
 
         .mat-header-row {
             min-height: 64px;
