--- a/src/app/main/content/apps/e-commerce/products/products.component.scss
+++ b/src/app/main/content/apps/e-commerce/products/products.component.scss
@@ -24,6 +24,7 @@
     .products-table {
         flex: 1 1 auto;
         border-bottom: 1px solid rgba(0, 0, 0, .12);
+        overflow: auto;
 
         .mat-header-row {
             min-height: 64px;
